added configuration properties class

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,5 @@ cloudant.password=a495a5c5f9b9daad60d52e95e246973d
 cloudant.url=https://7dd7a93e-5bbb-41ba-9474-05aab854b69c-bluemix.cloudant.com
 cloudant.db=employee
 
+#spring.profiles.active=cloudant
 server.port=8100
