--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,13 @@ cloudant.db=employee
 
 #spring.profiles.active=cloudant
 server.port=8100
+
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.group-id=lab.exercise.employee
+spring.kafka.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.topic=lab_topic_employee
+spring.kafka.auto-offset-reset=earliest
+spring.kafka.trusted-packages=com.garage.upskills.employeecloudant.domain
